feat: Spring Boot 4.1 백엔드 스캐폴딩 + Postgres + 통합 테스트 기반 (#3)
* chore: Spring Boot 4.1 백엔드 프로젝트 스캐폴딩 생성

start.spring.io에서 Java 21 / Boot 4.1.0 프로젝트를 생성했다.
settings.gradle.kts의 rootProject.name(kaldi-note-api)에서 파생된
메인 클래스명을 문서 구조(backend/CLAUDE.md)에 맞춰 KaldiNoteApplication으로
정리하고, 사용하지 않는 기본 생성 파일(HELP.md, 컨텍스트 로드 테스트,
데브용 TestApplication)을 제거했다.

* feat: 로컬 Postgres compose, Testcontainers 통합 테스트 기반, Spotless 포맷터 추가

- docker-compose.yml(루트) — 로컬 PostgreSQL 17
- application.yml/-local.yml/-test.yml — Flyway 스키마 소유, ddl-auto=validate 고정
- AbstractIntegrationTest + TestcontainersConfiguration — 이후 모든 통합 테스트의 베이스
- ApplicationSmokeTest — /actuator/health 헬스체크로 부트스트랩 검증 (PASS)
- Spotless(Google Java Format) 추가. 기본 버전(1.24.0)이 이 환경 JDK에서
  javac 내부 API 시그니처 불일치(NoSuchMethodError)로 깨져 1.28.0으로 고정
- backend/.gitignore를 삭제하고 루트 .gitignore로 통합(이미 백엔드 패턴을 포함하고 있었음)

* docs(plan1): Task 1 완료 반영 — 체크박스, 계획 편차, JOURNAL, CI 가드 제거

- Task 1 Step 1~10 체크, 실제와 달랐던 부분(Testcontainers/AutoConfigureMockMvc
  패키지 이동, google-java-format 버전 고정, git init 생략, .gitignore 통합)을
  계획 문서에 반영
- backend.yml의 backend/gradlew 존재 확인 가드 제거 (이제 항상 실행)
- JOURNAL에 이번 세션 기록 + Plan 1의 검증되지 않은 가정 1~3 확인 결과 남김

Co-Authored-By: Claude <noreply@anthropic.com>

* docs(journal): PR #3 CI 초록 확인 결과 반영

---------

Co-authored-by: Claude <noreply@anthropic.com>